added uslugi page

--- a/index.html
+++ b/index.html
@@ -61,11 +61,7 @@
                 <a title="Usługi" href="./uslugi.html">Usługi</a>
               </li>
               <li>
-                <a
-                  title="Opinie"
-                  href="https://usterka.pl/usterka-pl-opinie-o-usterka-pl/"
-                  >Opinie</a
-                >
+                <a title="Opinie" href="./opinie.html">Opinie</a>
               </li>
             </ul>
           </div>
@@ -114,7 +110,7 @@
             <a
               style="background-color: #64c11b"
               id="top_reservation_button"
-              href="https://rezerwacja.usterka.pl/umow"
+              href=""
               class="mybtn"
             >
               <span class="d-block d-md-none">Wezwij</span>
@@ -142,10 +138,7 @@
           </div>
           <div class="col-lg-5">
             <div id="header_services" class style="display: grid; gap: 28px">
-              <a
-                href="https://rezerwacja.usterka.pl/umow"
-                class="header_services__el"
-              >
+              <a href="" class="header_services__el">
                 <div
                   class="rounded-circle"
                   style="
@@ -170,10 +163,7 @@
                   </div>
                 </div>
               </a>
-              <a
-                href="https://rezerwacja.usterka.pl/umow"
-                class="header_services__el"
-              >
+              <a href="" class="header_services__el">
                 <div
                   class="rounded-circle"
                   style="
@@ -198,10 +188,7 @@
                   </div>
                 </div>
               </a>
-              <a
-                href="https://usterka.pl/partnerzy"
-                class="header_services__el d-none"
-              >
+              <a href="" class="header_services__el d-none">
                 <div
                   class="rounded-circle"
                   style="
@@ -431,7 +418,7 @@
       <div class="container">
         <div class style="margin: 0 -15px">
           <div class="hhsitem">
-            <a href="/elektryk">
+            <a href="">
               <div class="hhsitem__cont">
                 <img
                   style="background-color: #f8920a"
@@ -446,7 +433,7 @@
             </a>
           </div>
           <div class="hhsitem">
-            <a href="/hydraulik">
+            <a href="">
               <div class="hhsitem__cont">
                 <img
                   style="background-color: #1171f3"
@@ -461,7 +448,7 @@
             </a>
           </div>
           <div class="hhsitem">
-            <a href="/elektryk/montaz-i-wymiana-lamp">
+            <a href="">
               <div class="hhsitem__cont">
                 <img
                   style="background-color: #f80d62"
@@ -477,7 +464,7 @@
           </div>
 
           <div class="hhsitem">
-            <a href="/serwis-agd/naprawa-pralek">
+            <a href="">
               <div class="hhsitem__cont">
                 <img
                   style="background-color: #8c55fa"
@@ -493,7 +480,7 @@
           </div>
 
           <div class="hhsitem">
-            <a href="/serwis-agd/naprawa-kuchenek">
+            <a href="">
               <div class="hhsitem__cont">
                 <img
                   style="background-color: #f8920a"
@@ -509,7 +496,7 @@
           </div>
 
           <div class="hhsitem">
-            <a href="/serwis-agd/naprawa-piekarnikow">
+            <a href="">
               <div class="hhsitem__cont">
                 <img
                   style="background-color: #1171f3"
@@ -525,7 +512,7 @@
           </div>
 
           <div class="hhsitem">
-            <a href="/zlota-raczka">
+            <a href="">
               <div class="hhsitem__cont">
                 <img
                   style="background-color: #f65111"
@@ -540,7 +527,7 @@
           </div>
 
           <div class="hhsitem">
-            <a href="/slusarz">
+            <a href="">
               <div class="hhsitem__cont">
                 <img
                   style="background-color: #8c55fa"
@@ -556,7 +543,7 @@
           </div>
 
           <div class="hhsitem">
-            <a href="/zlota-raczka">
+            <a href="">
               <div class="hhsitem__cont">
                 <img
                   style="background-color: #f8920a"
@@ -578,10 +565,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-6 col-xl-3">
-            <a
-              href="https://usterka.pl/zlota-raczka/skladanie-mebli"
-              title="Skręcanie mebli"
-            >
+            <a href="" title="Skręcanie mebli">
               <div class="image_boxes__item">
                 <div class="image_boxes__image">
                   <img
@@ -605,10 +589,7 @@
           </div>
 
           <div class="col-sm-12 col-md-6 col-xl-3">
-            <a
-              href="https://usterka.pl/slusarz/wymiana-zamkow-i-wkladek"
-              title="Wymiana zamków"
-            >
+            <a href="" title="Wymiana zamków">
               <div class="image_boxes__item">
                 <div class="image_boxes__image">
                   <img
@@ -632,10 +613,7 @@
           </div>
 
           <div class="col-sm-12 col-md-6 col-xl-3">
-            <a
-              href="https://usterka.pl/serwis-agd/naprawa-suszarek-do-ubran"
-              title="Naprawa suszarek"
-            >
+            <a href="" title="Naprawa suszarek">
               <div class="image_boxes__item">
                 <div class="image_boxes__image">
                   <img
@@ -659,10 +637,7 @@
           </div>
 
           <div class="col-sm-12 col-md-6 col-xl-3">
-            <a
-              href="https://usterka.pl/serwis-agd/naprawa-zmywarek"
-              title="Serwis zmywarek"
-            >
+            <a href="" title="Serwis zmywarek">
               <div class="image_boxes__item">
                 <div class="image_boxes__image">
                   <img
@@ -686,10 +661,7 @@
           </div>
 
           <div class="col-sm-12 col-md-6 col-xl-3">
-            <a
-              href="https://usterka.pl/elektryk/montaz-i-wymiana-lamp"
-              title="Montaż lamp"
-            >
+            <a href="" title="Montaż lamp">
               <div class="image_boxes__item">
                 <div class="image_boxes__image">
                   <img
@@ -713,10 +685,7 @@
           </div>
 
           <div class="col-sm-12 col-md-6 col-xl-3">
-            <a
-              href="https://usterka.pl/elektryk/podlaczanie-plyt-indukcyjnych"
-              title="Podłączanie płyt indukcyjnych"
-            >
+            <a href="" title="Podłączanie płyt indukcyjnych">
               <div class="image_boxes__item">
                 <div class="image_boxes__image">
                   <img
@@ -742,10 +711,7 @@
           </div>
 
           <div class="col-sm-12 col-md-6 col-xl-3">
-            <a
-              href="https://usterka.pl/hydraulik/wymiana-i-montaz-kranow"
-              title="Wymiana baterii"
-            >
+            <a href="" title="Wymiana baterii">
               <div class="image_boxes__item">
                 <div class="image_boxes__image">
                   <img
@@ -769,10 +735,7 @@
           </div>
 
           <div class="col-sm-12 col-md-6 col-xl-3">
-            <a
-              href="https://usterka.pl/hydraulik/wymiana-i-naprawa-spluczek"
-              title="Naprawa spłuczek"
-            >
+            <a href="" title="Naprawa spłuczek">
               <div class="image_boxes__item">
                 <div class="image_boxes__image">
                   <img
@@ -799,7 +762,7 @@
         <div class="row">
           <div class="col text-center">
             <a
-              href="https://usterka.pl/uslugi"
+              href="./uslugi.html"
               class="mybtn w-100"
               data-wpel-link="internal"
               target="_self"
@@ -815,7 +778,7 @@
       <div class="container">
         <div style="margin: 0 -15px">
           <div class="hhsitem">
-            <a href="https://usterka.pl/sklepy/castorama">
+            <a href="">
               <div class="hhsitem__cont">
                 <img
                   style="background-color: #f8920a; color: #fff"
@@ -832,7 +795,7 @@
             </a>
           </div>
           <div class="hhsitem d-none">
-            <a href="https://usterka.pl/sklepy/klinikaagd">
+            <a href="">
               <div class="hhsitem__cont">
                 <img
                   style="background-color: #1171f3; color: #fff"
@@ -849,7 +812,7 @@
             </a>
           </div>
           <div class="hhsitem">
-            <a href="https://usterka.pl/sklepy/rtv-euro-agd">
+            <a href="">
               <div class="hhsitem__cont">
                 <img
                   style="background-color: #f80d62; color: #fff"
@@ -939,9 +902,7 @@
 
         <div class="row">
           <div class="col text-center">
-            <a href="https://usterka.pl/serwis" class="mybtn w-100"
-              >Więcej producentów</a
-            >
+            <a href="" class="mybtn w-100">Więcej producentów</a>
           </div>
         </div>
       </div>
@@ -1007,11 +968,7 @@
               />
             </p>
             <p class="all-reviews-wrap">
-              <a
-                href="https://usterka.pl/usterka-pl-opinie-o-usterka-pl"
-                class="mybtn"
-                >Więcej opinii</a
-              >
+              <a href="./opinie.html" class="mybtn">Więcej opinii</a>
             </p>
           </div>
 
@@ -1279,9 +1236,7 @@
               </p>
 
               <p>
-                <a href="https://rezerwacja.usterka.pl/umow" class="mybtn"
-                  >Wybierz termin</a
-                >
+                <a href="" class="mybtn">Wybierz termin</a>
               </p>
             </div>
           </div>
@@ -1310,10 +1265,7 @@
             <div class="col-lg-6 text-lg-right fsocial order-0 order-sm-1">
               <p>
                 <span class="fjoin-us">Znajdź nas</span>
-                <a
-                  href="https://pl.linkedin.com/company/usterka-pl"
-                  class="fsocial-ico"
-                  rel="nofollow"
+                <a href="" class="fsocial-ico" rel="nofollow"
                   ><img
                     title="Znajdź nas na Linkedin"
                     src="fonts/linkedin.svg"
@@ -1322,7 +1274,7 @@
                 <a
                   title="Znajdź nas na Facebooku"
                   class="fsocial-ico"
-                  href="https://www.facebook.com/usterkaPL/"
+                  href=""
                   rel="nofollow"
                   ><img
                     loading="lazy"
@@ -1340,7 +1292,7 @@
                   "
                   target="_blank"
                   rel="nofollow"
-                  href="https://play.google.com/store/apps/details?id=com.usterka"
+                  href=""
                   ><img
                     src="img/play.png"
                     alt="Logo Google Play"
