added opinie and added some changes to scrolling

--- a/index.html
+++ b/index.html
@@ -29,13 +29,9 @@
                 id="logo_a"
                 style="position: relative; top: -8px"
                 title="usterka.pl"
-                href="./index.html"
-                ><img
-                  title="Logo Usterka.pl"
-                  loading="lazy"
-                  src="fonts/logo.svg"
-                  alt="logo usterka.pl"
-                />
+                href="/"
+                >
+                Swiet.pl
 
                 <span
                   id="logo_headline"
@@ -139,7 +135,7 @@
           </div>
           <div class="col-lg-5">
             <div id="header_services" class style="display: grid; gap: 28px">
-              <a href="" class="header_services__el">
+              <a class="header_services__el cursor-pointer" onclick="scrollToForm()">
                 <div
                   class="rounded-circle"
                   style="
@@ -164,7 +160,7 @@
                   </div>
                 </div>
               </a>
-              <a href="" class="header_services__el">
+              <a class="header_services__el cursor-pointer" onclick="scrollToForm()">
                 <div
                   class="rounded-circle"
                   style="
@@ -219,7 +215,7 @@
     </section>
 
     <section class="services_boxes d-none" style="background-color: #fff">
-      <div class="container" style="25px 15px 35px">
+      <div class="container">
         <div class>
           <div class="top_box_element">
             <svg
@@ -564,7 +560,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-6 col-xl-3">
-            <a href="" title="Skręcanie mebli">
+            <a href="" class="usluga" title="Skręcanie mebli">
               <div class="image_boxes__item">
                 <div class="image_boxes__image">
                   <img
@@ -588,7 +584,7 @@
           </div>
 
           <div class="col-sm-12 col-md-6 col-xl-3">
-            <a href="" title="Wymiana zamków">
+            <a href="" class="usluga" title="Wymiana zamków">
               <div class="image_boxes__item">
                 <div class="image_boxes__image">
                   <img
@@ -612,7 +608,7 @@
           </div>
 
           <div class="col-sm-12 col-md-6 col-xl-3">
-            <a href="" title="Naprawa suszarek">
+            <a href="" class="usluga" title="Naprawa suszarek">
               <div class="image_boxes__item">
                 <div class="image_boxes__image">
                   <img
@@ -636,7 +632,7 @@
           </div>
 
           <div class="col-sm-12 col-md-6 col-xl-3">
-            <a href="" title="Serwis zmywarek">
+            <a href="" class="usluga" title="Serwis zmywarek">
               <div class="image_boxes__item">
                 <div class="image_boxes__image">
                   <img
@@ -660,7 +656,7 @@
           </div>
 
           <div class="col-sm-12 col-md-6 col-xl-3">
-            <a href="" title="Montaż lamp">
+            <a href="" class="usluga" title="Montaż lamp">
               <div class="image_boxes__item">
                 <div class="image_boxes__image">
                   <img
@@ -684,7 +680,7 @@
           </div>
 
           <div class="col-sm-12 col-md-6 col-xl-3">
-            <a href="" title="Podłączanie płyt indukcyjnych">
+            <a href="" class="usluga" title="Podłączanie płyt indukcyjnych">
               <div class="image_boxes__item">
                 <div class="image_boxes__image">
                   <img
@@ -710,7 +706,7 @@
           </div>
 
           <div class="col-sm-12 col-md-6 col-xl-3">
-            <a href="" title="Wymiana baterii">
+            <a href="" class="usluga" title="Wymiana baterii">
               <div class="image_boxes__item">
                 <div class="image_boxes__image">
                   <img
@@ -734,7 +730,7 @@
           </div>
 
           <div class="col-sm-12 col-md-6 col-xl-3">
-            <a href="" title="Naprawa spłuczek">
+            <a href="" class="usluga" title="Naprawa spłuczek">
               <div class="image_boxes__item">
                 <div class="image_boxes__image">
                   <img
