--- a/uslugi.html
+++ b/uslugi.html
@@ -29,13 +29,9 @@
                 id="logo_a"
                 style="position: relative; top: -8px"
                 title="usterka.pl"
-                href="./index.html"
-                ><img
-                  title="Logo Usterka.pl"
-                  loading="lazy"
-                  src="fonts/logo.svg"
-                  alt="logo usterka.pl"
-                />
+                href="/"
+                >
+                Swiet.pl
 
                 <span
                   id="logo_headline"
@@ -129,7 +125,7 @@
               <p class="breadcrumb">
                 <span
                   ><span
-                    ><a href="https://usterka.pl/">Strona główna</a> »
+                    ><a href="./index.html">Strona główna</a> »
                     <span class="breadcrumb_last" aria-current="page"
                       >Usługi</span
                     ></span
@@ -1064,7 +1060,57 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div class="footer-bottom">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 text-lg-left fcopy order-1 order-sm-0">
+              <p>Swiet © 2023</p>
+            </div>
 
+            <div class="col-lg-6 text-lg-right fsocial order-0 order-sm-1 d-none">
+              <p>
+                <span class="fjoin-us">Znajdź nas</span>
+                <a href="" class="fsocial-ico" rel="nofollow"
+                  ><img
+                    title="Znajdź nas na Linkedin"
+                    src="fonts/linkedin.svg"
+                    alt="linkedin usterka.pl"
+                /></a>
+                <a
+                  title="Znajdź nas na Facebooku"
+                  class="fsocial-ico"
+                  href=""
+                  rel="nofollow"
+                  ><img
+                    loading="lazy"
+                    src="fonts/facebook.svg"
+                    alt="facebook usterka.pl"
+                /></a>
+
+                <a
+                  title="Przejdź do aplikacji Usterka.pl w Google Play"
+                  class="mt-3 mt-sm-0"
+                  style="
+                    max-width: 130px;
+                    margin-left: 20px;
+                    margin-bottom: 20px;
+                  "
+                  target="_blank"
+                  rel="nofollow"
+                  href=""
+                  ><img
+                    src="img/play.png"
+                    alt="Logo Google Play"
+                    width="366"
+                    height="78"
+                /></a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 <!-- Modal -->
 <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
