--- a/uslugi.html
+++ b/uslugi.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/aa7653.css" />
     <link rel="stylesheet" href="./css/3916a7.css" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="icon" href="./img/cropped-favicon-32x32.png" sizes="32x32">
+    <link rel="icon" href="./img/cropped-favicon-32x32.png" sizes="32x32" />
     <title>Swiet</title>
   </head>
   <body>
@@ -30,7 +30,7 @@
                 style="position: relative; top: -8px"
                 title="usterka.pl"
                 href="/"
-                >
+              >
                 Swiet.pl
 
                 <span
@@ -105,14 +105,14 @@
             /></a>
 
             <span
-              style="background-color: #64c11b; cursor: pointer;"
+              style="background-color: #64c11b; cursor: pointer"
               id="top_reservation_button"
               class="mybtn"
               onclick="openModal()"
             >
               <span class="d-block d-md-none">Wezwij</span>
               <span class="d-none d-md-block">Zamów fachowca</span>
-          </span>
+            </span>
           </div>
         </div>
       </div>
@@ -357,7 +357,11 @@
                 </a>
               </div>
               <div class="col-12 col-sm-6 col-md-4">
-                <a href="#" class="usluga" title="Podłączanie płyt indukcyjnych">
+                <a
+                  href="#"
+                  class="usluga"
+                  title="Podłączanie płyt indukcyjnych"
+                >
                   <div class="image_boxes_new__item">
                     <div class="image_boxes_new__image">
                       <img
@@ -723,7 +727,11 @@
             <h3>Pozostale</h3>
             <div class="row">
               <div class="col-12 col-sm-6 col-md-4">
-                <a href="#" class="usluga" title="Wieszanie telewizora na ścianie">
+                <a
+                  href="#"
+                  class="usluga"
+                  title="Wieszanie telewizora na ścianie"
+                >
                   <div class="image_boxes_new__item">
                     <div class="image_boxes_new__image">
                       <img
@@ -841,7 +849,11 @@
                 </a>
               </div>
               <div class="col-12 col-sm-6 col-md-4">
-                <a href="#" class="usluga" title="Malowanie i tapetowanie ścian">
+                <a
+                  href="#"
+                  class="usluga"
+                  title="Malowanie i tapetowanie ścian"
+                >
                   <div class="image_boxes_new__item">
                     <div class="image_boxes_new__image">
                       <img
@@ -974,10 +986,7 @@
                       <span>Błyskawicznie</span> <span>Punktualni</span>
                     </div>
                     <div class="book-box-btns catalog_contact_buttons">
-                      <a
-                        rel="nofollow"
-                        href="#"
-                        class="d-block mybtn"
+                      <a rel="nofollow" href="#" class="d-block mybtn"
                         >Wybierz termin on-line</a
                       >
                       <script>
@@ -1068,7 +1077,9 @@
               <p>Swiet © 2023</p>
             </div>
 
-            <div class="col-lg-6 text-lg-right fsocial order-0 order-sm-1 d-none">
+            <div
+              class="col-lg-6 text-lg-right fsocial order-0 order-sm-1 d-none"
+            >
               <p>
                 <span class="fjoin-us">Znajdź nas</span>
                 <a href="" class="fsocial-ico" rel="nofollow"
@@ -1111,102 +1122,159 @@
         </div>
       </div>
     </footer>
-<!-- Modal -->
-<div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <div class="d-flex align-items-center">
-          <h5 class="modal-title text-uppercase font-weight-bold" id="exampleModalLabel">Kontakt</h5>
-        <span class="ms-1" style="min-width: 20px;">
-        </span> 
-        </div>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div class="col-12">
-          <h2 class="text-uppercase mt-3 font-weight-bold d-none">Kontakt</h2>
-          <form action="">
-            <div class="row">
-              <div class="col-lg-6">
-                <div class="form-group mt-2">
-                  <label for="">Imię i Nazwisko</label>
-                  <input type="text" class="form-control" placeholder="Imię i Nazwisko" required>
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="form-group mt-2">
-                  <label for="">Miasto</label>
-                  <input type="text" class="form-control" placeholder="Miasto" value="Wrocław" disabled required>
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="form-group mt-2">
-                  <label for="">Email</label>
-                  <input type="email" class="form-control" placeholder="Email" required>
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="form-group mt-2">
-                  <label for="">Telefon</label>
-                  <input type="text" class="form-control" placeholder="Telefon" required>
-                </div>
-              </div>
-              <div class="col-12 form-group mt-2">
-                <label for="">Usługa</label>
-                <div class="form-control custom-select">
-                    <p class="value-selected">
-                      Wybierz usługę
-                    </p>
-                    <div class="options d-none">
-                      <div style="padding: 0.5rem 1rem; border-bottom: 1px solid #aaa">
-                        <input type="text" class="form-control">
-                      </div>
-                      <ul class="">
-                      </ul>
-                    </div>
-                </div>
-    
-              </div>
-              <div class="col-12">
-                <div class="form-group mt-2">
-                  <label for="">Opis problemu</label>
-                  <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Opis problemu" rows="3" required></textarea>
-                </div>
-              </div>
-              <div class="col-12">
-              <div class="form-group d-none">
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
-                  <label class="form-check-label" for="invalidCheck2">
-                    Zgadzam się z polityką prywatności
-                  </label>
-                </div>
-              </div>
-              </div>
-              <div class="col-12 text-end">
-                <button class="btn btn-light" type="submit">Wysłać</button>
-              </div>
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="modal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <div class="d-flex align-items-center">
+              <h5
+                class="modal-title text-uppercase font-weight-bold"
+                id="exampleModalLabel"
+              >
+                Kontakt
+              </h5>
+              <span class="ms-1" style="min-width: 20px"> </span>
             </div>
-          </form>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
           </div>
-      </div>
-      <div class="modal-footer d-none">
-        <button type="button" class="btn btn-success" data-bs-dismiss="modal">Close</button>
+          <div class="modal-body">
+            <div class="col-12">
+              <h2 class="text-uppercase mt-3 font-weight-bold d-none">
+                Kontakt
+              </h2>
+              <form action="">
+                <div class="row">
+                  <div class="col-lg-6">
+                    <div class="form-group mt-2">
+                      <label for="">Imię i Nazwisko</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        placeholder="Imię i Nazwisko"
+                        required
+                      />
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="form-group mt-2">
+                      <label for="">Miasto</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        placeholder="Miasto"
+                        value="Wrocław"
+                        disabled
+                        required
+                      />
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="form-group mt-2">
+                      <label for="">Email</label>
+                      <input
+                        type="email"
+                        class="form-control"
+                        placeholder="Email"
+                        required
+                      />
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="form-group mt-2">
+                      <label for="">Telefon</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        placeholder="Telefon"
+                        required
+                      />
+                    </div>
+                  </div>
+                  <div class="col-12 form-group mt-2">
+                    <label for="">Usługa</label>
+                    <div class="form-control custom-select">
+                      <p class="value-selected">Wybierz usługę</p>
+                      <div class="options d-none">
+                        <div
+                          style="
+                            padding: 0.5rem 1rem;
+                            border-bottom: 1px solid #aaa;
+                          "
+                        >
+                          <input type="text" class="form-control" />
+                        </div>
+                        <ul class=""></ul>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-12">
+                    <div class="form-group mt-2">
+                      <label for="">Opis problemu</label>
+                      <textarea
+                        class="form-control"
+                        id="exampleFormControlTextarea1"
+                        placeholder="Opis problemu"
+                        rows="3"
+                        required
+                      ></textarea>
+                    </div>
+                  </div>
+                  <div class="col-12">
+                    <div class="form-group d-none">
+                      <div class="form-check">
+                        <input
+                          class="form-check-input"
+                          type="checkbox"
+                          value=""
+                          id="invalidCheck2"
+                          required
+                        />
+                        <label class="form-check-label" for="invalidCheck2">
+                          Zgadzam się z polityką prywatności
+                        </label>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-12 text-end">
+                    <button class="btn btn-light" type="submit">Wysłać</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+          <div class="modal-footer d-none">
+            <button
+              type="button"
+              class="btn btn-success"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
-<div id="modal-backdrop" class=""></div>
+    <div id="modal-backdrop" class=""></div>
 
     <script src="./js/bootstrap.bundle.min.js"></script>
 
     <script
-    type="text/javascript"
-    src="js/jquery.js"
-    id="jquery-core-js"
-  ></script>
-  <script src="js/script.js">
-    </script>
+      type="text/javascript"
+      src="js/jquery.js"
+      id="jquery-core-js"
+    ></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
