--- a/uslugi.html
+++ b/uslugi.html
@@ -29,7 +29,7 @@
                 id="logo_a"
                 style="position: relative; top: -8px"
                 title="usterka.pl"
-                href="/"
+                href="./index.html"
               >
                 Swiet.pl
 
