--- a/uslugi.html
+++ b/uslugi.html
@@ -1162,20 +1162,7 @@
                       <input
                         type="text"
                         class="form-control"
-                        placeholder="Imię i Nazwisko"
-                        required
-                      />
-                    </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="form-group mt-2">
-                      <label for="">Miasto</label>
-                      <input
-                        type="text"
-                        class="form-control"
-                        placeholder="Miasto"
-                        value="Wrocław"
-                        disabled
+                        placeholder="Podaj imię i nazwisko"
                         required
                       />
                     </div>
@@ -1186,7 +1173,7 @@
                       <input
                         type="email"
                         class="form-control"
-                        placeholder="Email"
+                        placeholder="Podaj adres e-mail"
                         required
                       />
                     </div>
@@ -1197,10 +1184,18 @@
                       <input
                         type="text"
                         class="form-control"
-                        placeholder="Telefon"
+                        placeholder="Podaj numer telefonu"
                         required
                       />
                     </div>
+                  </div>
+                  <div class="col-lg-6"></div>
+                  <div class="col-12 form-group mt-2">
+                    <label for="">Typ klienta</label>
+                    <select class="form-control" name="typ_klienta" id="">
+                      <option value="osoba">Osoba fizyczna</option>
+                      <option value="firma">Firma</option>
+                    </select>
                   </div>
                   <div class="col-12 form-group mt-2">
                     <label for="">Usługa</label>
@@ -1217,6 +1212,54 @@
                         </div>
                         <ul class=""></ul>
                       </div>
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <div class="form-group mt-2">
+                      <label for="">Miejscowość</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        placeholder="Miasto"
+                        value="Wrocław"
+                        disabled
+                        required
+                      />
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <div class="form-group mt-2">
+                      <label for="">Kod pocztowy</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        placeholder="Podaj kod pocztowy"
+                        value=""
+                        required
+                      />
+                    </div>
+                  </div>
+                  <div class="col-lg-4">
+                    <div class="form-group mt-2">
+                      <label for="">Ulica</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        value=""
+                        required
+                      />
+                    </div>
+                  </div>
+                  <div class="col-6 col-lg-4">
+                    <div class="form-group mt-2">
+                      <label for="">Numer domu</label>
+                      <input type="text" class="form-control" value="" />
+                    </div>
+                  </div>
+                  <div class="col-6 col-lg-4">
+                    <div class="form-group mt-2">
+                      <label for="">Lokal</label>
+                      <input type="text" class="form-control" value="" />
                     </div>
                   </div>
                   <div class="col-12">
@@ -1247,7 +1290,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-12 text-end">
+                  <div class="col-12 text-end mt-3">
                     <button class="btn btn-light" type="submit">Wysłać</button>
                   </div>
                 </div>
