removed some uslugi

--- a/uslugi.html
+++ b/uslugi.html
@@ -797,22 +797,6 @@
                 </a>
               </div>
               <div class="col-12 col-sm-6 col-md-4">
-                <a href="#" class="usluga" title="Płytkowanie">
-                  <div class="image_boxes_new__item">
-                    <div class="image_boxes_new__image">
-                      <img
-                        alt="Płytkowanie"
-                        loading="lazy"
-                        src="./img/uslugi/Plytkowanie"
-                      />
-                    </div>
-                    <div class>
-                      <h2 class="image_boxes_new__title">Płytkowanie</h2>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div class="col-12 col-sm-6 col-md-4">
                 <a href="#" class="usluga" title="Regulacja i wymiana drzwi">
                   <div class="image_boxes_new__item">
                     <div class="image_boxes_new__image">
@@ -905,22 +889,6 @@
                 </a>
               </div>
               <div class="col-12 col-sm-6 col-md-4">
-                <a href="#" class="usluga" title="Prace w ogrodzie">
-                  <div class="image_boxes_new__item">
-                    <div class="image_boxes_new__image">
-                      <img
-                        alt="Prace w ogrodzie"
-                        loading="lazy"
-                        src="./img/uslugi/Prace-w-ogrodzie"
-                      />
-                    </div>
-                    <div class>
-                      <h2 class="image_boxes_new__title">Prace w ogrodzie</h2>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div class="col-12 col-sm-6 col-md-4">
                 <a href="#" class="usluga" title="Wymiana zamków do drzwi">
                   <div class="image_boxes_new__item">
                     <div class="image_boxes_new__image">
@@ -952,22 +920,6 @@
                       <h2 class="image_boxes_new__title">
                         Serwis kuchenek gazowych
                       </h2>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div class="col-12 col-sm-6 col-md-4">
-                <a href="#" class="usluga" title="Naprawa bram">
-                  <div class="image_boxes_new__item">
-                    <div class="image_boxes_new__image">
-                      <img
-                        alt="Naprawa bram"
-                        loading="lazy"
-                        src="./img/uslugi/Naprawa-bram"
-                      />
-                    </div>
-                    <div class>
-                      <h2 class="image_boxes_new__title">Naprawa bram</h2>
                     </div>
                   </div>
                 </a>
@@ -1015,11 +967,7 @@
                   </div>
                   <div class="catalog_contact_box_law">
                     Przyjedzie do Ciebie nasz pracownik. Za usługę możesz
-                    zapłacić gotówką, a przy wyborze terminu przez stronę -
-                    zazwyczaj również kartą. Przed wizytą zapoznaj się z
-                    <a href="https://rezerwacja.usterka.pl/regulamin.pdf"
-                      >regulaminem</a
-                    >. Informacje takie jak telefon i adres podasz w zamówieniu.
+                    zapłacić gotówką.
                   </div>
                 </div>
               </div>
