fix some errors with bg image on index page

--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
     <section class="hero">
       <div class="position-relative bg-image-wrapper">
         <div class="img-wrapper">
-          <img src="./img/site/hero_bg.webp" alt="" />
+          <img class="d-none d-md-block" src="./img/site/hero_bg.webp" alt="" />
+          <img class="d-md-none" src="./img/site/hero_bg_small.jpg" alt="" />
         </div>
         <div class="background-overlay"></div>
         <div class="position-absolute h-100 w-100" style="top: 0">
